# rules_xcodeproj_playground

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  helpers.bzl  repositories.bzl
SmallFramework/: BUILD.bazel
SmallFramework/SmallFrameworkTests/: SmallTest.swift
SwiftFramework/: BUILD.bazel
SwiftFramework/SwiftFramework/: FooBart.swift
SwiftFramework/SwiftFrameworkTests/: SmallTest.swift
Tests/: BUILD.bazel
Tests/MixedTestsSource/: ObjCTest.m
