load("@build_bazel_rules_ios//rules:framework.bzl", rules_ios_apple_framework = "apple_framework")
load("@build_bazel_rules_ios//rules:test.bzl", rules_ios_ios_unit_test = "ios_unit_test")

_DEFAULT_IOS_VERSION = "14.0"

rules_ios_apple_framework(
    name = "SwiftFramework",
    module_name = "SwiftFramework",
    testonly = False,
    srcs = ["SwiftFramework/FooBart.swift"],
    platforms = {
        "ios": _DEFAULT_IOS_VERSION,
    },
    infoplists = [":Framework-Info.plist"],
    bundle_id = "com.reddit.SwiftFramework",
    link_dynamic = False,
    visibility = ["//visibility:public"],
    xcconfig = {"APPLICATION_EXTENSION_API_ONLY": "YES"},
    sdk_frameworks = [
        "Foundation",
    ],
)

rules_ios_ios_unit_test(
    name = "SwiftFrameworkTests",
    size = "medium",
    minimum_os_version = _DEFAULT_IOS_VERSION,
    srcs = ["SwiftFrameworkTests/SmallTest.swift"],
    visibility = ["//visibility:public"],
    runner = "//:standard_runner",
    test_host = None,
    infoplists = [":UnitTest-Info.plist"],
    env = {
        "IS_EXECUTING_TEST": "1",
    },
    module_name = "SwiftFrameworkTests",
    deps = [
        ":SwiftFramework",
    ],
    sdk_frameworks = [
        "XCTest",
    ],
)
