load("@build_bazel_rules_ios//rules:framework.bzl", rules_ios_apple_framework = "apple_framework")

rules_ios_apple_framework(
    name = "SwiftFramework",
    module_name = "SwiftFramework",
    testonly = False,
    srcs = ["SwiftFramework/FooBart.swift"],
    platforms = {
        "ios": "14.0",
    },
    infoplists = [":Framework-Info.plist"],
    bundle_id = "com.reddit.SwiftFramework",
    link_dynamic = False,
    visibility = ["//visibility:public"],
    xcconfig = {"APPLICATION_EXTENSION_API_ONLY": "YES"},
    sdk_frameworks = [
        "Foundation",
    ],
)
